--- a/chess-website-uml/public/index.html
+++ b/chess-website-uml/public/index.html
@@ -305,5 +305,7 @@
   <script type="module" src="./src/app/App.js"></script>
   <script type="module" src="./src/engine/boot.js"></script>
   <script src="./src/ui/DrawOverlay.js" defer></script>
+  <script src="./src/ui/SysArrowPolicy.js" defer></script>
+  <script src="./src/ui/MoveFlash.js" defer></script>
 </body>
 </html>
