board visual fixes

--- a/chess-website-uml/public/index.html
+++ b/chess-website-uml/public/index.html
@@ -37,7 +37,7 @@
       margin-inline:auto; width:92vw; max-width:660px;
     }
     @media (min-width: 980px){
-      .board-wrap{ width:50vw; max-width:none; }
+      .board-wrap{ width:40vw; max-width:none; }
     }
 
     /* Board */
@@ -141,7 +141,7 @@
 <body>
   <div class="page">
     <header>
-      <h1>Chess by Z</h1>
+      <h1>Chess by Sam</h1>
       <div class="subtitle">Fully offline • No dependencies • Client-side engine</div>
     </header>
 
