--- a/chess-website-uml/public/index.html
+++ b/chess-website-uml/public/index.html
@@ -103,6 +103,20 @@
     .status{margin-top:6px; min-height:24px}
     .badge{display:inline-flex; min-width:10px; height:18px; padding:0 6px; align-items:center; justify-content:center; border-radius:999px; background:#112033; border:1px solid #27405c; font-size:12px; color:#cfe2ff}
 
+    /* Buttons */
+    button{
+      background:var(--accent);
+      color:var(--bg);
+      border:none;
+      border-radius:6px;
+      padding:4px 10px;
+      font-weight:600;
+      cursor:pointer;
+      transition:background .2s, transform .1s;
+    }
+    button:hover{ background:#5b97f0; }
+    button:active{ transform:translateY(1px); }
+
     /* Game info button + popover (App.js injects the button; styles here) */
     .game-info-trigger{
       position:absolute; top:12px; right:12px;
