refactor: simplify time controls

--- a/chess-website-uml/public/index.html
+++ b/chess-website-uml/public/index.html
@@ -207,8 +207,8 @@
 
         <div class="row" id="knobsRow">
           <label class="muted">Elo</label>
-          <input type="range" id="elo" min="800" max="3000" step="50" value="3000" />
-          <span id="eloVal">3000</span>
+          <input type="range" id="elo" min="1" max="100" step="1" value="100" />
+          <span id="eloVal">100%</span>
 
           <label class="muted">Depth</label>
           <input type="range" id="depth" min="2" max="22" step="1" value="22" />
@@ -217,10 +217,6 @@
           <label class="muted">MultiPV</label>
           <input type="range" id="multipv" min="1" max="4" step="1" value="1" />
           <span id="multipvVal">1</span>
-
-          <label class="muted">Think (ms)</label>
-          <input type="range" id="think" min="50" max="3000" step="50" value="3000" />
-          <span id="thinkVal">3000</span>
         </div>
 
         <div class="row">
