--- a/chess-website-uml/public/index.html
+++ b/chess-website-uml/public/index.html
@@ -5,6 +5,7 @@
   <title>Chess by Sam</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0f1216" />
+  <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
 
   <style>
     :root{
