Test clock flip on board orientation

--- a/chess-website-uml/public/index.html
+++ b/chess-website-uml/public/index.html
@@ -39,6 +39,7 @@
 
     /* Board with clocks above and below */
     .board-area{display:flex; flex-direction:column; align-items:center; gap:8px}
+    .board-area.flipped{flex-direction:column-reverse}
 
     .board-wrap{
       position:relative; background:var(--layer);
