--- a/chess-website-uml/public/index.html
+++ b/chess-website-uml/public/index.html
@@ -122,6 +122,7 @@
     }
     .row{display:flex; align-items:center; gap:12px; flex-wrap:wrap; margin:8px 0}
     .row label{min-width:80px}
+    .button-row{justify-content:center}
 
     /* Form controls */
     select,
@@ -170,6 +171,7 @@
     }
     button:hover{ background:#5b97f0; }
     button:active{ transform:scale(.97); box-shadow:0 1px 2px rgba(0,0,0,.25); }
+    button.primary{ box-shadow:0 0 8px var(--accent); font-weight:bold; }
 
     /* Game info text styling */
     .tip-moves{
@@ -223,7 +225,7 @@
 
       <!-- CONTROLS UNDER THE BOARD -->
       <div class="card">
-        <div class="row">
+        <div class="row button-row">
           <label for="side" style="display:none">Your side</label>
           <select id="side" style="display:none">
             <option value="white">White</option>
@@ -233,7 +235,7 @@
           <button id="switchSide" class="switch-btn">Switch to black and restart</button>
         </div>
 
-        <div class="row" id="modeButtons">
+        <div class="row button-row" id="modeButtons">
           <button class="btn" data-mode="play">Play vs Engine</button>
           <button class="btn" data-mode="analysis">Analysis</button>
           <button class="btn" data-mode="puzzle">Puzzles</button>
