feat: shrink board by 5%

--- a/chess-website-uml/public/index.html
+++ b/chess-website-uml/public/index.html
@@ -122,12 +122,12 @@
         border-radius: 12px;
         padding: 10px;
         margin-inline: auto;
-        width: 92vw;
-        max-width: 660px;
+        width: calc(92vw * 0.95);
+        max-width: calc(660px * 0.95);
       }
       @media (min-width: 980px) {
         .board-wrap {
-          width: 40vw;
+          width: calc(40vw * 0.95);
           max-width: none;
         }
       }
