feat: replace new and next puzzle buttons

--- a/chess-website-uml/public/index.html
+++ b/chess-website-uml/public/index.html
@@ -481,8 +481,7 @@
         <div class="board-area">
           <div class="row" id="puzzleBottom" style="display: none">
             <button id="fetchDaily">Daily</button>
-            <button id="startPuzzle">New</button>
-            <button id="nextPuzzle">Next</button>
+            <button id="newPuzzle">New Puzzle</button>
             <button id="puzzleHint">Hint</button>
           </div>
           <div class="player-clock black" id="clockBlack">05:00</div>
