feat: add puzzle theme filtering

--- a/index.html
+++ b/index.html
@@ -521,6 +521,14 @@
               <select id="openingFilter" style="flex: 1"></select>
             </div>
             <div class="row">
+              <label>Theme</label>
+              <input
+                id="themeFilter"
+                placeholder="e.g., fork"
+                style="flex: 1"
+              />
+            </div>
+            <div class="row">
               <label>Difficulty</label>
               <input
                 type="range"
