feat: show Elo range on puzzle difficulty slider

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                 max="10"
                 value="5"
               />
-              <span class="muted" id="difficultyLabel">Medium</span>
+              <span class="muted" id="difficultyLabel">Medium (1600-1900)</span>
             </div>
           </div>
         </div>
