Use dropdown for puzzle theme filter

--- a/index.html
+++ b/index.html
@@ -522,11 +522,7 @@
             </div>
             <div class="row">
               <label>Theme</label>
-              <input
-                id="themeFilter"
-                placeholder="e.g., fork"
-                style="flex: 1"
-              />
+              <select id="themeFilter" style="flex: 1"></select>
             </div>
             <div class="row">
               <label>Difficulty</label>
