--- a/index.html
+++ b/index.html
@@ -423,6 +423,13 @@
         margin-top: 6px;
         min-height: 24px;
       }
+      #puzzleStatus {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
+      }
       .badge {
         display: inline-flex;
         min-width: 10px;
