style: neutralize difficulty slider track

--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
         width: 100%;
         pointer-events: none;
         background: none;
+        accent-color: var(--square-dark);
       }
       #difficultySlider input[type="range"]::-webkit-slider-thumb {
         pointer-events: all;
