--- a/index.html
+++ b/index.html
@@ -387,13 +387,13 @@
         left: 0;
         width: 100%;
         background: none;
-        pointer-events: none;
+        pointer-events: auto;
       }
       #difficultySlider input[type="range"]::-webkit-slider-runnable-track,
       #difficultySlider input[type="range"]::-moz-range-track,
       #difficultySlider input[type="range"]::-moz-range-progress {
         background: none;
-        pointer-events: none;
+        pointer-events: auto;
       }
       #difficultySlider input[type="range"]::-webkit-slider-thumb,
       #difficultySlider input[type="range"]::-moz-range-thumb {
