--- a/index.html
+++ b/index.html
@@ -387,19 +387,19 @@
         left: 0;
         width: 100%;
         background: none;
-        pointer-events: auto;
+        pointer-events: none;
       }
       #difficultySlider input[type="range"]::-webkit-slider-runnable-track,
       #difficultySlider input[type="range"]::-moz-range-track,
       #difficultySlider input[type="range"]::-moz-range-progress {
         background: none;
-        pointer-events: auto;
+        pointer-events: none;
       }
       #difficultySlider input[type="range"]::-webkit-slider-thumb,
       #difficultySlider input[type="range"]::-moz-range-thumb {
         -webkit-appearance: none;
         appearance: none;
-        pointer-events: auto;
+        pointer-events: all;
         background: var(--bg);
         border: none;
         width: 16px;
@@ -423,7 +423,6 @@
       }
       #difficultyMax {
         z-index: 2;
-        pointer-events: none;
       }
       #difficultySlider input:disabled {
         opacity: 0.5;
