--- a/index.html
+++ b/index.html
@@ -374,67 +374,13 @@
         transform: translateY(-50%);
         white-space: nowrap;
       }
-      #difficultySlider {
-        position: relative;
+      #difficultySelects {
+        display: flex;
         flex: 1;
-        height: 24px;
-        background: var(--square-dark);
+        gap: 4px;
       }
-      #difficultySlider input[type="range"] {
-        -webkit-appearance: none;
-        appearance: none;
-        position: absolute;
-        left: 0;
-        width: 100%;
-        background: none;
-        pointer-events: none;
-      }
-      #difficultySlider input[type="range"]::-webkit-slider-runnable-track,
-      #difficultySlider input[type="range"]::-moz-range-track,
-      #difficultySlider input[type="range"]::-moz-range-progress {
-        background: none;
-        pointer-events: none;
-      }
-      #difficultySlider input[type="range"]::-webkit-slider-thumb,
-      #difficultySlider input[type="range"]::-moz-range-thumb {
-        -webkit-appearance: none;
-        appearance: none;
-        pointer-events: all;
-        background: var(--bg);
-        border: none;
-        width: 16px;
-        height: 24px;
-        border-radius: 0;
-      }
-      #difficultyMin::-webkit-slider-thumb,
-      #difficultyMin::-moz-range-thumb {
-        border-left: 2px solid var(--accent);
-        border-top: 2px solid var(--accent);
-        border-bottom: 2px solid var(--accent);
-      }
-      #difficultyMax::-webkit-slider-thumb,
-      #difficultyMax::-moz-range-thumb {
-        border-right: 2px solid var(--accent);
-        border-top: 2px solid var(--accent);
-        border-bottom: 2px solid var(--accent);
-      }
-      #difficultyMin {
-        z-index: 1;
-      }
-      #difficultyMax {
-        z-index: 2;
-      }
-      #difficultySlider input:disabled {
-        opacity: 0.5;
-      }
-      #difficultyRangeFill {
-        position: absolute;
-        top: 50%;
-        height: 4px;
-        background: var(--accent);
-        transform: translateY(-50%);
-        pointer-events: none;
-        z-index: 0;
+      #difficultySelects select {
+        flex: 1;
       }
       @media (max-width: 600px) {
         #difficultyRow {
@@ -643,24 +589,11 @@
                 Difficulty
                 <input type="checkbox" id="difficultyFilter" checked />
               </label>
-              <div id="difficultySlider">
-                <div id="difficultyRangeFill"></div>
-                <input
-                  type="range"
-                  id="difficultyMin"
-                  min="1"
-                  max="10"
-                  value="5"
-                />
-                <input
-                  type="range"
-                  id="difficultyMax"
-                  min="1"
-                  max="10"
-                  value="5"
-                />
+              <div id="difficultySelects">
+                <select id="difficultyMin"></select>
+                <select id="difficultyMax"></select>
               </div>
-              <span class="muted" id="difficultyLabel">Medium (1600-1900)</span>
+              <span class="muted" id="difficultyLabel">Any</span>
             </div>
             <div class="muted" id="puzzleCount"></div>
           </div>
