--- a/index.html
+++ b/index.html
@@ -334,6 +334,19 @@
         gap: 8px;
         align-items: center;
       }
+      .puzzlePrompt .spinner {
+        width: 40px;
+        height: 40px;
+        border: 4px solid #1c2533;
+        border-top-color: #39d98a;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
 
       /* Cards */
       .card {
@@ -561,6 +574,17 @@
 
             <!-- Puzzle completion prompt -->
             <div class="puzzlePrompt" id="puzzlePrompt"></div>
+
+            <!-- Puzzle loading prompt -->
+            <div class="puzzlePrompt" id="puzzleLoading">
+              <div class="box">
+                <div class="spinner"></div>
+                <div>
+                  Loading... To load your puzzle faster, Sam recommends a
+                  smaller sample size in the filter below!
+                </div>
+              </div>
+            </div>
 
             <!-- Promotion dialog -->
             <div class="promo" id="promo">
