--- a/index.html
+++ b/index.html
@@ -222,9 +222,7 @@
       .sq.pb,
       .dragPiece.pb {
         color: #101419;
-        text-shadow:
-          0 1px 0 rgba(255, 255, 255, 0.08),
-          0 0 2px rgba(255, 255, 255, 0.05);
+        text-shadow: 0 0 1px rgba(255, 255, 255, 0.2);
       }
 
       /* Drag ghost */
