changed loading text

--- a/index.html
+++ b/index.html
@@ -584,8 +584,7 @@
               <div class="box">
                 <div class="spinner"></div>
                 <div>
-                  Loading... To load your puzzle faster, Sam recommends a
-                  smaller sample size in the filter below!
+                  Loading...
                 </div>
               </div>
             </div>
