changed footer text

--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
       </div>
       <footer class="site-footer">
         <p>
-          Fully offline · No dependencies · Client-side engine ·
+          Client-side engine ·
           <a href="https://github.com/samzlotnik/chess-by-z">Open source</a>.
           Contact:
           <a href="mailto:itsjustme@samzlotnik.se">itsjustme@samzlotnik.se</a>
