Rename site title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Chess by Sam</title>
+    <title>SCHACK BY SAM</title>
     <base href="/chess-by-z/" />
     <script>
       const redirect = sessionStorage.redirect;
@@ -558,7 +558,7 @@
   <body>
     <div class="page">
       <header>
-        <h1>Chess<span class="by-sam">by Sam</span></h1>
+        <h1>SCHACK<span class="by-sam">BY SAM</span></h1>
       </header>
 
       <div class="stack">
