--- a/index.html
+++ b/index.html
@@ -302,11 +302,13 @@
         background: #f2f5f8;
         width: 100%;
         height: 50%;
+        transition: height 0.2s linear;
       }
       .evalbar .black {
         background: #0c0f14;
         width: 100%;
         height: 50%;
+        transition: height 0.2s linear;
       }
 
       /* Promotion */
