--- a/index.html
+++ b/index.html
@@ -169,8 +169,10 @@
         border-radius: 12px;
         overflow: hidden;
         touch-action: none;
-        cursor: grab;
+        -webkit-user-select: none;
         user-select: none;
+        -webkit-touch-callout: none;
+        cursor: grab;
       }
       .sq {
         position: relative;
